Fix lower z-index for sticky header and remove col-X class from convention list (#342)

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -718,7 +718,7 @@ button:not(:disabled).apilos-btn--secondary--red:hover {
   position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 0;
-  z-index: 10000;
+  z-index: 100;
 }
 
 /*
